2006-12-14  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/formats/gaussformat.cpp: Will export "model/basis,method" if keyword
	translation is enable however is not tested accurate.
	
	* src/formats/ghemicalformat.cpp: Re-wrote and tested the GAMESS keyword
	export.
	
	* src/formats/gamessformat.cpp: Modified keyword import operations.
	Should now import the model,basis,method for keywords it knows about.
	This method is all statically implemented.  We need a new way to do this
	translation such as OBKeyword class.
	
	* src/babel.cpp: Added help information for the '-k' parameter which
	attempts to translation keywords along with molecule information.

2006-12-13  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-[python,ruby,java,perl].i: Updated to include all
	iterators in obiter.h. Note: there is a problem getting
	OBMolPairIter to work even if std_pair.i is included and a template
	<int, int> created (compile of openbabel_python.cpp fails in this case
	so these additions have not been included). 

2006-12-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/babel.cpp: Moved src/main.cpp here -- more consistent with
	new directory structure.

	* configure, configure.in, src/Makefile.*, tools/Makefile.*: Ditto.

	* scripts/: Regenerated files based on Noel's changes today.

	* test/files/smartsresults.txt: Updated after Craig's bug-fixes.

	* test/cmltest/: Update scripts to handle new location of babel
	binary.

2006-12-13  Craig A. James <cjames@emolecules.com>

	* src/parsmarts.cpp, src/formats/smilesformat.cpp: Fixed bug in
	SMILES parser/writer and SMARTS parser that reversed Cis/Trans
	chirality when the "/" or "\" followed an open-parenthesis "("
	character.  Commented out an unused function from parsmarts.cpp.
	Fixed a bug where a semicolon ";" was printed for an aromatic bond
	instead of a colon ":" for external bonds.
	
2006-12-13  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-[python,ruby,java,perl].i: Tidied up the